...
        <Stack.Screen name="(tabs)" options={{ headerShown: false }} />
        <Stack.Screen name="(auth)" options={{ headerShown: false }} />
        <Stack.Screen
          name="account/all"
          options={{
            title: 'All Accounts',
            headerBackTitle: 'Accounts',
            ...headerBackButtonOptions('Accounts'),
          }}
        />
        <Stack.Screen
          name="account/[id]"
          options={{
...
